[package]
name = "raknet-rust"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
description = "A high-performance RakNet transport library in Rust"
authors = ["ClexaGod"]
readme = "README.md"
repository = "https://github.com/mcbe-rs/raknet-rust.git"
homepage = "https://github.com/mcbe-rs/raknet-rust"
documentation = "https://docs.rs/raknet-rust"
keywords = ["raknet", "udp", "network", "tokio", "game-server"]
categories = ["network-programming", "asynchronous", "game-development"]
include = [
    "Cargo.toml",
    "README.md",
    "LICENSE*",
    "src/**",
    "examples/**",
    "tests/**",
]

[dependencies]
bitflags = "2.6"
bytes = "1.8"
thiserror = "2.0"
tokio = { version = "1.48", features = ["io-util", "net", "rt", "sync", "time", "macros"] }
socket2 = "0.6"
libc = "0.2"
getrandom = "0.2"
hmac = "0.12"
sha2 = "0.10"
tracing = "0.1"
zeroize = "1.8"
dashmap = "6.1"
parking_lot = "0.12"
ahash = "0.8"

[dev-dependencies]
proptest = "1.6"
